2007-01-04  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/script-fu/scripts/old-photo.scm: fixed crash when
	Mottle option is selected (mLayer was incorrectly declared).

2007-01-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreviewarea.c: fixed clipping (bug #392692).

2007-01-04  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): Add
	workaround for a problem that occurs on Win32 when one has opened
	an image from the root of a drive letter and then does Save As.

2007-01-03  Raphaël Quinet  <raphael@gimp.org>

	* libgimpwidgets/Makefile.am (libgimpwidgetsinclude_HEADERS):
	install gimpratioentry.h, otherwise it is not possible to build
	any plug-ins including gimpwidgets.h.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselect.c
	* libgimp/gimpprogress.c
	* libgimp/gimpgradientselect.c
	* libgimp/gimpfontselect.c
	* libgimp/gimppatternselect.c
	* libgimp/gimppaletteselect.c: removed pointless and partly wrong
	information from gimp_install_temp_proc() calls.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselectbutton.c (gimp_brush_select_button_new):
	initialize opacity, spacing and paint mode as described by the API
	docs. Fixes bug #356901.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.c: fixed blurb.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_about.c: make the About dialog transient
	to the main window and close it when the Close button is pressed.

	* plug-ins/imagemap/imap_cmd_guides.c: use a GimpHintBox.

	* plug-ins/imagemap/imap_menu.c: marked menu labels and tooltips for
	translation.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/images/Makefile.am
	* plug-ins/imagemap/images/stock-map-info.png
	* plug-ins/imagemap/imap_stock.[ch]: removed custom info icon.

	* plug-ins/imagemap/imap_menu.c: use GTK_STOCK_INFO instead.

	* plug-ins/imagemap/imap_main.c