@@ -1,3 +1,8 @@
+2007-01-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/nova.c: minor code cleanup. Changed mnemonic of
+	the menu entry.
+
 2007-01-04  Raphaël Quinet  <raphael@gimp.org>
 
 	* plug-ins/script-fu/scripts/old-photo.scm: fixed crash when
